# GenAI_session12

./: 0.basic_agent.py  1.create_agent_with_tool.py  2.structured_output.py  3.creating_teams.py  4.human_in_the_loop.py  5.chat_demo.py  6.research_agent.py  7.stock_analysis.py  README.md  pyproject.toml  requirements.txt
